# Diary

./: .clangd  CMakeLists.txt  README.md
UI/: editDiaryFrame.ui  initialFrame.ui  loadDiaryFrame.ui  mainWin.ui  newDiaryFrame.ui
src/: main.cpp  main_window.cpp  main_window.hpp
